<resources>
    <string name="app_name">Oxipulse</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_hispass">MainActivity</string>
    <string name="title_activity_histpas">MainActivity</string>
    <string name="todo">TODO</string>
    <string name="registrate">Registrate</string>
    <string name="ingresar">Ingresar</string>
    <string name="historyr">Historial</string>
    <string name="check">Validar</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="password">Contraseña</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">La contraseña debe contener al menos 5 caracteres</string>
    <string name="login_failed">"El email o contraseña introducidos no son correctos."</string>
    <string name="pforget">Olvide mi contraseña</string>
    <string name="email">Correo Electronico</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido Paterno</string>
    <string name="middle_name">Apellido Materno</string>
    <string name="confirm_password">Confirmar Contraseña</string>
    <string name="health_personel">Soy Personal de Salud</string>
    <string name="accept_legal_notice">He leido, y entiendo y acepto el Aviso legal de Oxipulse</string>
    <string name="Register">Registrarse</string>
    <string name="signout">Cerrar Sesion</string>
    <string name="ask_signout">Seguro que quiere Cerrar Sesion?</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="fecha_de_nacimiento">Fecha de\nNacimiento</string>
    <string name="peso">Peso(Kg)</string>
    <string name="estatura">Estatura(cm)</string>
    <string name="sexo">Sexo</string>
    <string name="asma">Asma</string>
    <string name="hipertension">Hipertension</string>
    <string name="diabetes">Diabetes</string>
    <string name="apellido_materno">Apellido Materno</string>
    <string name="_31_10_1994">31/10/1994</string>
    <string-array name="Sexos">
        <item>Hombre</item>
        <item>Mujer</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_oxigen_sat">Introducir valor de saturacion de oxigeno</string>
    <string name="enter_heart_rate">Introducir valor de ritmo cardiaco</string>
    <string name="hint_oxi_sat">Este valor es en (%) y tiene que estar entre 1 y 100</string>
    <string name="hint_heart_rate">Este valor es en pulsasiones por minuto (ppm) y tiene que estar entre 0 y 200</string>
    <string name="Evaluation">Evaluar</string>
    <string name="hint_csv">Subir archivo CSV</string>
    <string name="eval_res_green">Sus resultados son normales, no hay necesidad de consulta medica</string>
    <string name="eval_res_yellow">Sus resultados estan ligeramente por debajo de lo normal, no hay necesidad de consulta medica</string>
    <string name="eval_res_orange">Sus resultados estan por debajo de lo normal, agende una cita medica</string>
    <string name="eval_res_red">Sus resultados son muy bajos, consulte a su medico mas cercano</string>
    <string name="cont_descr_nurse_with_triage">enfermera sosteniendo color</string>
    <string name="cont_desc_triage_color">Color de la respuesta del triage</string>
    <string name="date_header">Fecha</string>
    <string name="header_oxigen_saturation">Saturacion\nde oxigeno</string>
    <string name="header_label">Etiqueta</string>
    <string name="header_heartRate">Ritmo\nCardiaco</string>
    <string name="health_personnel">Personal De Salud</string>
    <string name="CSV_Button">Subir CSV</string>
    <string name="Select_Patient">Seleccione el paciente para evaluar</string>
    <string name="recuperar">Recuperar</string>
    <string name="profilePicDesc">ProfilePic</string>
    <string name="imguploadicon">imgUploadIcon</string>
</resources>