<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.oxipulse.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.oxipulse.ui.dashboard.DashboardFragment"
        android:label="@string/historyr"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_check"
        android:name="com.example.oxipulse.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_check" />
    <fragment
        android:id="@+id/navigation_exit"
        android:name="com.example.oxipulse.ui.exit.ExitFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/exit_fragment" />


    <activity
        android:id="@+id/startActivity"
        android:name="com.example.oxipulse.StartActivity"
        android:label="activity_start"
        tools:layout="@layout/activity_start" />
</navigation>