<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:context=".ui.Evaluation.EvaluationFragment">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Select_Patient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/Select_Patient"
            android:visibility="invisible"
            tools:visibility="visible" />

        <Spinner
            android:id="@+id/spinnerSelectPatient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:visibility="invisible"
            tools:visibility="visible" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_oxigen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_oxigen_sat"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:visibility="invisible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_oxigen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number|numberDecimal"
                android:visibility="invisible"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/lbl_hint_oxigen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_oxi_sat"
                android:visibility="invisible" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_heartrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/enter_heart_rate"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            android:visibility="invisible">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input_heartrate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberDecimal"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/lbl_hint_heartrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_heart_rate"
                android:visibility="invisible" />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btn_input_csv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableEnd="@drawable/ic_baseline_folder_open_24"
            android:drawableRight="@drawable/ic_baseline_folder_open_24"
            android:enabled="true"
            android:text="@string/CSV_Button"
            android:textColor="#000000"
            android:visibility="invisible"
            app:backgroundTint="@color/f_fuerte"
            tools:layout_editor_absoluteX="133dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible"
            tools:visibility="visible" />

        <Button
            android:id="@+id/button_evaluation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/bordes_redondos"
            android:enabled="true"
            android:text="@string/Evaluation"
            android:textColor="@color/black"
            android:visibility="invisible"
            app:backgroundTint="@null"
            tools:layout_editor_absoluteX="155dp" />


    </LinearLayout>
</ScrollView>

