<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/itext_email_login"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="300dp"
        android:layout_height="44dp"
        android:drawableEnd="@drawable/ic_correo"
        android:drawableRight="@drawable/ic_correo"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:isScrollContainer="false"
        app:itemIconTint="@drawable/textselec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.182"

        />


    <EditText
        android:id="@+id/itext_pass_login"
        android:layout_width="300dp"
        android:layout_height="44dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:drawableEnd="@drawable/ic_password_1"
        android:drawableRight="@drawable/ic_password_1"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:itemIconTint="@drawable/textselec"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itext_email_login"
        app:layout_constraintVertical_bias="0.227"

        />

    <Button
        android:id="@+id/btn_ingresar"
        android:layout_width="229dp"
        android:layout_height="56dp"
        android:background="@drawable/bordes_redondos"
        android:text="@string/ingresar"
        android:textColor="@color/black"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itext_pass_login"
        app:layout_constraintVertical_bias="0.409" />

    <TextView
        android:id="@+id/lkforgot_pass"
        android:layout_width="181dp"
        android:layout_height="22dp"
        android:layout_marginBottom="332dp"
        android:text="Olvide mi contraseña"
        android:textAlignment="center"
        android:textColor="@color/hipervinculo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.873"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center_horizontal"/>

</androidx.constraintlayout.widget.ConstraintLayout>